# FUND-SELECTOR-CN

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_SUMMARY.md  QUICK_START.md  README.md  USAGE.md  app.py  pyproject.toml  run.py  start.sh
src/: __init__.py  data_loader.py  indicators.py  visualization.py
